--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,10 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
+.color-bg {
+  background-color: #f3b61a;
+}
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
